<resources>
    <string name="app_name">Knolle ili</string>
    <string-array name="content_array" translatable="false">
        <item>Farben</item>
        <item>Farbkästen</item>
        <item>Pinsel</item>
        <item>Kreide</item>
        <item>Klebeband</item>
        <item>Locher</item>
        <item>Stifte</item>
        <item>Kleber</item>
        <item>Scheren</item>
        <item>Erste-Hilfe-Packs</item>
        <item>Kühlpacks</item>
        <item>Erste-Hilfe-Rucksack</item>
        <item>Augendusche</item>
        <item>Caras</item>
        <item>Caras</item>
        <item>Fundkiste</item>
        <item>Papier</item>
        <item>Pfadis</item>
        <item>Pfadis</item>
        <item>Vasen</item>
        <item>Becher</item>
        <item>Altersstufenfächer</item>
        <item>Wichtel</item>
        <item>Wichtel</item>
        <item>Schwarze Eimer</item>
        <item>Dreckige Becher</item>
        <item>Wikinger-Schach</item>
        <item>Kleister</item>
        <item>Malerkram</item>
        <item>Gelber Eimer</item>
        <item>Schwungtuch</item>
        <item>Dübel</item>
        <item>Nägel</item>
        <item>Tackernadeln</item>
        <item>Schrauben</item>
        <item>Klemmen</item>
        <item>Zollstöcke</item>
        <item>Schmirgelpapier</item>
        <item>Blaue Eimer</item>
        <item>Seil</item>
        <item>Spielekiste</item>
        <item>(Bälle)</item>
        <item>Sägen</item>
        <item>Hammer</item>
        <item>Zangen</item>
        <item>Schraubenzieher</item>
        <item>Tacker</item>
        <item>Klappspaten</item>
        <item>Beil</item>
        <item>Linolbretter</item>
        <item>Spielekiste</item>
        <item>(Tücher, Bälle)</item>
        <item>Jonglierkram</item>
        <item>Liederbücher</item>
        <item>Musikanlage</item>
        <item>Getränke</item>
        <item>Spiele</item>
        <item>Billiardkram</item>
        <item>Kabeltrommel</item>
        <item>Pokerkoffer</item>
        <item>Spiele</item>
        <item>Spiele</item>
        <item>Knolle-Knolle Maskottchen</item>
        <item>Büro-Material</item>
        <item>Karton-Reste</item>
        <item>Origami-Papier</item>
        <item>Crepp-Papier</item>
        <item>Wellpappe</item>
        <item>ganze Pappe</item>
        <item>weißes Papier</item>
        <item>Transparentpapier</item>
        <item>Öffentlichkeitsarbeit</item>
        <item>Plakate</item>
        <item>Knolle-Aufkleber</item>
        <item>sonstiger Kleinkram (abschließbar)</item>
        <item>Leiter-Persobögen</item>
        <item>Umschläge</item>
        <item>Aufnäher</item>
        <item>Kasse</item>
        <item>Urkunden</item>
        <item>Öffentlichkeitsarbeit</item>
        <item>Bücher</item>
        <item>Öffentlichkeitsarbeit</item>
        <item>Beamer</item>
        <item>Mikrofon</item>
        <item>Chemiekalien</item>
        <item>Flyer</item>
        <item>Kaffeemaschine</item>
        <item>Knolle-Pullis</item>
        <item>T-Shirts</item>
        <item>Kochplatte</item>
        <item>Müllbeutel</item>
        <item>Handtücher</item>
        <item>Lebensmittel</item>
        <item>Sisal</item>
        <item>Stoff</item>
        <item>Kerzen</item>
        <item>Quartetts</item>
        <item>Ton</item>
        <item>Stoff</item>
        <item>Leder</item>
        <item>Wahlurne</item>
        <item>Karte</item>
        <item>Kompass</item>
        <item>Teelichter</item>
        <item>Stofftaschen</item>
        <item>Banner</item>
        <item>Perlen</item>
        <item>Bast</item>
        <item>Stoff</item>
        <item>Stoff</item>
        <item>Ton-Werkzeug</item>
        <item>Stempel</item>
        <item>Heisskleber</item>
        <item>Lötkolben</item>
        <item>Gläser</item>
        <item>Windlichter</item>
        <item>Halloweendeko</item>
        <item>Filz-Wolle</item>
        <item>Knüpf-Bänder</item>
        <item>Gips</item>
        <item>Wolle</item>
        <item>Geländespiel-Karten</item>
        <item>Geräusche-Kim</item>
        <item>Knicklichter</item>
        <item>Batikfarben</item>
        <item>Stoffbeutel</item>
        <item>Schwedenstuhlstoffe</item>
        <item>Geländespiele</item>
        <item>Acryl-, Stoff-, Handmalfarben</item>
        <item>Spraydosen</item>
        <item>Stofffarbe</item>
        <item>Siebe</item>
        <item>Zahnbürsten</item>
        <item>Sand</item>
        <item>Skalpelle</item>
        <item>Filmdosen</item>
        <item>Wolle</item>
        <item>Grablichter</item>
        <item>Girlanden</item>
        <item>Pressen</item>
        <item>Fimo</item>
        <item>Besteck</item>
        <item>Linol-Zeug</item>
        <item>Brennpeter</item>
        <item>Lochzange</item>
        <item>Bastelkram</item>
        <item>Speckstein</item>
        <item>Holzscheiben</item>
        <item>Watte</item>
    </string-array>
    <string-array name="rack_array" translatable="false">
        <item>Regal 1</item>
        <item>Schrank 1</item>
        <item>Schrank 2</item>
        <item>Schrank 3</item>
        <item>Würfel 1</item>
        <item>Würfel 2</item>
        <item>Trophäenbrett 1</item>
    </string-array>
    <string-array name="k_array" translatable="false">
        <item>Regal 1</item>
        <item>Schrank 1</item>
        <item>Schrank 2</item>
        <item>Schrank 3</item>
        <item>Würfel 1</item>
        <item>Würfel 2</item>
        <item>Trophäenbrett 1</item>
    </string-array>
    <string-array name="w_array" translatable="false">
        <item>Regal 1</item>
    </string-array>
    <string-array name="d_array" translatable="false">
        <item>Schrank 1</item>
    </string-array>
    <string-array name="p_array" translatable="false">
        <item>Regal 1</item>
    </string-array>
    <string-array name="room_array" translatable="false">
        <item>Materialkeller</item>
        <item>Kömpchen</item>
        <item>Wappenraum</item>
        <item>Dachgiebel</item>
        <item>Kabuff</item>
    </string-array>
    <string name="all_search">suchen</string>
    <string name="all_content">Inhalt</string>
    <string name="all_room">Raum</string>
    <string name="all_rack">Regal</string>
    <string name="all_X" translatable="false">X</string>
    <string name="all_Y" translatable="false">Y</string>
    <string name="all_m" translatable="false">Materialkeller</string>
    <string name="all_k" translatable="false">Kömpchen</string>
    <string name="all_w" translatable="false">Wappenraum</string>
    <string name="all_d" translatable="false">Dachgiebel</string>
    <string name="all_p" translatable="false">Kabuff</string>
    <string name="all_r1" translatable="false">Regal 1</string>
    <string name="all_s1" translatable="false">Schrank 1</string>
    <string name="all_s2" translatable="false">Schrank 2</string>
    <string name="all_s3" translatable="false">Schrank 3</string>
    <string name="all_w1" translatable="false">Würfel 1</string>
    <string name="all_w2" translatable="false">Würfel 2</string>
    <string name="all_t1" translatable="false">Trophäenbrett 1</string>
    <string name="all_error">Ups, das sollte nicht passieren</string>
    <string name="all_shelf_not_found">Das Regal %1$s kenne ich nicht, sag bitte Luca Bescheid.</string>
    <string name="all_notFound">leider nichts gefunden, versuche einen anderen Begriff</string>
    <string name="all_networkError">Probleme mit der Serververbindung, versuche es im offline Modus</string>
    <string name="all_gips" translatable="false">z.B. Gips</string>
    <string name="all_got">Verstanden</string>
    <string name="tour_searchbar">Gib hier ein wonach du suchst</string>
    <string name="tour_searchbutton">Hier drücken um danach zu suchen</string>
    <string name="tour_table">Drücke auf eine Reihe um den Eintrag auszuwählen</string>
    <string name="tour_image">Drücke auf die markierte Fläche um dir den Behälter genauer anzusehen</string>
    <string name="tour_gips" translatable="false">Gips</string>
    <string name="all_noresult">Leider nichts gefunden versuche es mit einem anderen Suchbegriff</string>
    <string name="all_toomanyresults">Zu viele Ergebnisse, bitte sei etwas genauer</string>
    <string name="all_read">Alle Anzeigen</string>
    <string name="tour_readbutton">Hier drücken um einen Überblick über das gesamte Material zu bekommen, danach kann das gewünschte ausgewählt werden</string>
    <string name="all_noLocalJson">Damit du auch offline Ergebnisse bekommst, musst du einmal im Netz auf Alle Anzeigen drücken</string>
    <string name="tour_connection">Der offline Modus kann jetzt manuell aktiviert oder deaktiviert werden</string>
    <string name="all_update_note">Neue Funktionen</string>
    <string name="all_location_concat">%1$s im %2$s</string>
    <string name="all_position">Position</string>
    <string name="tour_rvtable">Drücke auf den Raum um eine Raumübersicht zu bekommen und auf die Position um eine Übersicht über das Regal zu bekommen</string>
    <string name="all_emptyinput">%1$s cannot be empty.</string>
    <string name="all_test">test</string>
    <string name="all_close">schliessen</string>
    <string name="api_pos_exists">Es gibt bereits eine Kiste an der Position %1$s im Regal %2$s, wolltest du bearbeiten?</string>
    <string name="api_couldnt_edit">Bearbeitung war nicht möglich.</string>
    <string name="api_added_chest">Kiste erfolgreich hinzugefügt.</string>
    <string name="api_edited_chest">Kiste erfolgreich bearbeitet.</string>
    <string name="api_couldnt_add">Hinzufügen nicht möglich.</string>
    <string name="all_unknown">Unbekannter Fehler.</string>
    <string name="all_done">fertig</string>
    <string name="all_cancel">abbrechen</string>
</resources>
