<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="200dp"
                android:layout_height="50dp">
            <AutoCompleteTextView
                android:hint="@string/all_gips"
                android:id="@+id/input"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColorHint="@color/colorSecondaryText"/>
                <Button
                    android:id="@+id/calc_clear_txt_Prise"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@drawable/ic_baseline_clear_24px"
                    android:onClick="clearInput"/>
            </FrameLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/all_search"
                android:onClick="searchClick"
                android:id="@+id/searchBtn"
                android:textSize="12sp"
                style="@style/BtnTheme"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/all_read"
                android:onClick="readClick"
                android:id="@+id/readBtn"
                android:textSize="12sp"
                style="@style/BtnTheme"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_room"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_position"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/recyclerview_row">
            </androidx.recyclerview.widget.RecyclerView>
            <!--
            <TableLayout
                android:id="@+id/resultTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">
                <TableRow>
                    <TextView
                        android:text="@string/all_content"
                        android:textSize="18sp"
                        android:textAlignment="center"/>
                    <TextView
                        android:text="@string/all_room"
                        android:textSize="18sp"
                        android:textAlignment="center"/>
                    <TextView
                        android:text="@string/all_rack"
                        android:textSize="18sp"
                        android:textAlignment="center"/>
                    <TextView
                        android:text="@string/all_X"
                        android:textSize="18sp"
                        android:textAlignment="center"/>
                    <TextView
                        android:text="@string/all_Y"
                        android:textSize="18sp"
                        android:textAlignment="center"/>
                </TableRow>
            </TableLayout>
            -->
        </ScrollView>

    </LinearLayout>

</RelativeLayout>